test/pkg004/expected
Uncaught error: user error (test.ipkg:9:1: error: filename
    must contain no directory
    component, expected: space
<EOF> 
^     )
